Thu Mar 26 12:48:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/PerlACE/ProcessVX.pm:
        * bin/PerlACE/ProcessVX_Unix.pm:
        * bin/PerlACE/ProcessVX_Win32.pm:
          Added support for ACE_RUN_VX_TGT_STARTUP_SCRIPT. This is a script
          on the host system that is loaded and then executed on the target

Thu Mar 26 09:21:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao-ciao.spec:
          Added explicit provides for mpc

Thu Mar 26 09:02:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Thread.inl (condattr_destroy, condattr_init):
          Simplified these methods

Wed Mar 25 19:27:45 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/OS_NS_Thread.inl:
          Address the possibility that both PTHREADS and STHREADS are
          available, which is the case on Solaris 5.5 and newer. The
          header prefers PTHREAD definitions to STHREAD, so now this code
          does the same.

Wed Mar 25 19:09:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/os_limits.h:
        * Kokyu/DSRT_Dispatcher_Impl_T.h:
          Fixed VxWorks 6.7 compile problems

        * Kokyu/Kokyu.cpp:
          Initialise pointers with 0

Wed Mar 25 13:04:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-vxworks6.7.h:
          isascii still gives a problem with VxWorks 6.7.

Wed Mar 25 09:15:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_vxworks.GNU:
          Added support for VxWorks 6.7

Tue Mar 24 15:16:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-common.h:
          When the user defines ACE_HAS_WTHREADS_CONDITION_VARIABLE we don't
          define ACE_LACKS_COND_T

        * ace/OS_NS_Thread.cpp:
        * ace/OS_NS_Thread.h:
        * ace/OS_NS_Thread.inl:
          Windows Vista/Server 2008 and newer do have native support for